fix: fixed link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1>Links</h1>
 
         <!-- Short Bio -->
-        <p>This site is powered by <a href="https://littlelink.o">LittleLink</a>, an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>.
+        <p>This site is powered by <a href="https://littlelink.io">LittleLink</a>, an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>.
             <br/>Hosted by <a href="https://vercel.com">vercel</a>.</p>
 
         <!--
