--- a/privacy.html
+++ b/privacy.html
@@ -84,6 +84,20 @@
             <a href="https://vercel.com/legal/privacy-policy">Privacy Policy</a>
           </p>
           <!-- End Section -->
+
+          <!-- Start Section -->
+          <p>
+            <b>📦 Displaying Content From External Platforms</b>
+            <br>
+            This type of service allows you to view content hosted on external platforms directly from these pages and interact with them.<br><br>
+            This type of service might still collect web traffic data for the pages where the service is installed, even when Users do not use it.
+            <br>
+            <br>
+            <b>1.) Google Fonts</b><br>
+            Personal Data: <i>Usage Data; various types of Data as specified in the privacy policy of the service</i>
+            <br>
+            <a href="https://policies.google.com/privacy">Privacy Policy</a></p>
+          <!-- End Section -->
           <br />
           <br />
           
