fix: fixed linkedin link and rolled back avatar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Links</title>
-  <meta name="description" content="Find us online!">
-  <meta name="author" content="Seth Cottle">
+  <meta name="description" content="Find me online!">
+  <meta name="author" content="Christian">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -66,8 +66,8 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/cactus.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
-
+        <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
+        
         <!-- Title -->
         <h1>Links</h1>
 
@@ -127,7 +127,7 @@
         <br> -->
 
         <!-- LinkedIn -->
-        <a class="button button-linked" href="https://www.linkedin.com/in/christian-ortlepp-603a491aa/" target="_blank" rel="noopener">
+        <a class="button button-linked" href="https://www.linkedin.com/in/christian-o-603a491aa" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
         <br>
 
