feat: added mastodon

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar.png">
 
+  <!-- Mastodon Verification -->
+  <a rel="me" href="https://mastodon.social/@corite"></a>
 </head>
 
 <body>
@@ -63,7 +65,7 @@
 
         <!-- Your Image Here -->
         <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
-                
+
         <!-- Title -->
         <h1>Links</h1>
 
