feat: updated mastodon link

--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar.png">
 
-  <!-- Mastodon Verification -->
-  <a rel="me" href="https://mastodon.social/@corite"></a>
 </head>
 
 <body>
@@ -165,7 +163,7 @@
         <br> -->
 
         <!-- Mastodon -->
-        <a class="button button-mastodon" href="https://mastodon.social/@corite" target="_blank" rel="me noopener">
+        <a class="button button-mastodon" href="https://det.social/@corite" target="_blank" rel="me noopener">
             <img class="icon" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
         <br>
 
